[package]
name = "fdups"
description = "Utility for finding and removing duplicate files, fast."
version = "0.1.0"
edition = "2021"
authors = ["Ayush Bindlish <email@ayushbindlish.com>"]
license = "MIT OR Apache-2.0"
readme="README.md"
repository="https://github.com/ayushbindlish/fdups.git"
keywords = ["command-line", "library", "find_duplicates"]


[dependencies]
rust-crypto = "0.2"
rayon = "1.7"
ignore = "0.4"
lru = "0.10"
