[package]
name = "fdups"
description = "Utility for finding and removing duplicate files, fast."
version = "0.2.0-dev"
edition = "2021"
authors = ["Ayush Bindlish <email@ayushbindlish.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ayushbindlish/fdups.git"
keywords = ["command-line", "library", "find_duplicates"]
categories = ["command-line-utilities", "utilities", "development-tools"]


[dependencies]
rayon = "1.7"
ignore = "0.4"
blake2 = "0.10"
generic-array = "0.14"
dashmap = "5.4"
log = "0.4"
env_logger = "0.10"
term_size = "0.3"
human_bytes = { version = "0.4", default-features = false, features = ["fast"] }
clap = "4.2"
anyhow = "1.0"
thiserror = "1.0"
